23 September 2008: Wouter
	- Msg cache is loaded. A cache load enables cache responses.

22 September 2008: Wouter
	- dump_cache and load_cache statements in unbound-control.
	  RRsets are dumped and loaded correctly.
	  Msg cache is dumped.

19 September 2008: Wouter
	- locking on the localdata structure.
	- add and remove local zone and data with unbound-control.
	- ldns trunk snapshot updated, make tests work again.

18 September 2008: Wouter
	- fixup error in time calculation.
	- munin plugin improvements.
	- nicer abbreviations for high query types values (ixfr, axfr, any...)
	- documented the statistics output in unbound-control man page.
	- extended statistics prints out histogram, over unbound-control.

17 September 2008: Wouter
	- locking for threadsafe bogus rrset counter.
	- ldns trunk no longer exports b32 functions, provide compat.
	- ldns tarball updated.
	- testcode/ldns-testpkts.c const fixups.
	- fixed rcode stat printout.
	- munin plugin in contrib.
	- stats always printout uptime, because stats plugins need it.

16 September 2008: Wouter
	- extended-statistics: yesno config option.
	- unwanted replies spoof nearmiss detector.
	- iana portlist updated.

15 September 2008: Wouter
	- working start, stop, reload commands for unbound-control.
	- test for unbound-control working; better exit value for control.
	- verbosity control via unbound-control.
	- unbound-control stats.

12 September 2008: Wouter
	- removed browser control mentions. Proto speccy.

11 September 2008: Wouter
	- set nonblocking on new TCP streams, because linux does not inherit
	  the socket options to the accepted socket.
	- fix TCP timeouts.
	- SSL protected connection between server and unbound-control.

10 September 2008: Wouter
	- remove memleak in privacy addresses on reloads and quits.
	- remote control work.

9 September 2008: Wouter
	- smallapp/unbound-control-setup.sh script to set up certificates.

4 September 2008: Wouter
	- scrubber scrubs away private addresses.